# GACNet

./: README.md
data_preprocessing/: README
data_preprocessing/eig_compution_op/: CMakeLists.txt  eig_com.cpp  eig_com_intensity.cpp  eig_feature.py  isinblock_gpu.cu  samlping_gpu.cu  scene2blocks.cpp  test.py
data_preprocessing/prep_stanford/: collect_indoor3d_data.py  gen_indoor3d_h5.py  indoor3d_util.py  prep_scene.py
data_preprocessing/prep_stanford/meta/: all_data_label.txt
net_S3DIS/: run.py  run.sh  run_test.py  test.py  train.py
test_utils/: CMakeLists.txt  README  interpolate_gpu.cu  three_interpolate.cpp  three_interpolate.py
tf_ops/: cuda_ulits.cu  tf_compile.sh  tf_gather.cpp  tf_grad_op_test.py  tf_interpolate.cpp  tf_ops.py  tf_sampling.cpp  tf_test.py
utils/: model.py  pcnet_util.py  provider.py  tf_util.py
